priv/lib-src/_components.filters.scss
.c-filters {
    margin-bottom: 2em;

    label {
        display: block;
        font-size: 0.825em;
    }

    @include breakpoint($mediumBreakpoint) {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
    }
}

.c-btn-filter-submit {
    display: none;
}

.c-filters__options {
    display: grid;
    grid-template-columns: repeat(2, 1fr) ;
    align-items: center;
    gap: 1rem;
    width: 100%;
    margin: 2em 0 0;

    &:has(.c-filters__remove) {
        grid-template-columns: repeat(2, 1fr) 4.5rem;
    }

    label {
        width: 100%;
        grid-row: 1;
    }

    @include breakpoint($mediumBreakpoint) {
        width: fit-content;
        display: flex;
        margin: 0 0 0 auto;

        > label:first-child {
            width: auto;
            position: relative;
            top: 10px;
        }
    }
}

.c-filters__date {
    display: flex;
    flex-flow: column wrap;
    grid-row: 2;
    position: relative;
    
    label {
        display: block;
        font-size: 0.825em;
    }

    input[type="date"] {
        display: block;
        flex-grow: 1;
        width: 100%;
        min-width: 0;
        background: var(--lightTheme);
        cursor: pointer;
        color: light-dark(var(--darkTheme), var(--typographyColor));

        &::-webkit-calendar-picker-indicator {
            cursor: inherit;
            color: inherit;
        }
    }
}

.c-filters__keywords {
    grid-row: 2;
}

.c-custom-select {
    width: 100%;
    position: relative;

    select {
        width: 100%;
        appearance: none;
        background: var(--lightTheme);
        color: light-dark(var(--darkTheme), var(--typographyColor));
    }

    &:after {
        content: '';
        width: 0;
        height: 0;
        position: absolute;
        top: 19px;
        right: 10px;
        border-top: 10px solid var(--darkTheme);
        border-bottom: 10px solid transparent;
        border-left: 7px solid transparent;
        border-right: 7px solid transparent;
        pointer-events: none;
    }

    @include breakpoint($mediumBreakpoint) {
        width: fit-content;
    }
}

.c-filters__remove {
    flex-shrink: 0;
    grid-row: 2;
    align-self: end;
    color: light-dark(var(--darkTheme), var(--typographyColor));
    transition: background 0.3s ease-out, color 0.3s ease-out;

    svg {
        transform: rotate(45deg);
        fill: light-dark(var(--darkTheme), var(--typographyColor));
        transition: fill 0.3s ease-out;
    }

    @include setInteractive {
        background: var(--darkTheme);
        color: light-dark(var(--lightTheme), white);

        svg {
            fill: light-dark(var(--lightTheme), var(--typographyColor));
        }
    }
}

